--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "nodemailer": "^6.7.8",
     "razorpay": "^2.9.6",
     "sharp": "^0.30.7",
+    "twilio": "^5.9.0",
     "winston": "^3.8.1"
   },
   "devDependencies": {
