--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "nodemailer": "^6.10.1",
     "razorpay": "^2.9.6",
     "sharp": "^0.30.7",
+    "striptags": "^3.2.0",
     "twilio": "^5.9.0",
     "winston": "^3.8.1"
   },
